[project]
name = "significancetestingt-testexample"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "anyio (>=4.9.0,<4.10.0)",
    "appnope (>=0.1.4,<0.2.0)",
    "asttokens (>=3.0.0,<3.1.0)",
    "backports-tarfile (>=1.2.0,<1.3.0)",
    "build (>=1.2.2.post1,<1.3.0)",
    "cachecontrol (>=0.14.3,<0.15.0)",
    "certifi (>=2025.6.15,<2025.7.0)",
    "cffi (>=1.17.1,<1.18.0)",
    "charset-normalizer (>=3.4.2,<3.5.0)",
    "cleo (>=2.1.0,<2.2.0)",
    "comm (>=0.2.2,<0.3.0)",
    "crashtest (>=0.4.1,<0.5.0)",
    "debugpy (>=1.8.14,<1.9.0)",
    "decorator (>=5.2.1,<5.3.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "dulwich (>=0.22.8,<0.23.0)",
    "exceptiongroup (>=1.3.0,<1.4.0)",
    "executing (>=2.2.0,<2.3.0)",
    "fastjsonschema (>=2.21.1,<2.22.0)",
    "filelock (>=3.18.0,<3.19.0)",
    "findpython (>=0.6.3,<0.7.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "httpcore (>=1.0.9,<1.1.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<3.11)",
    "importlib-metadata (>=8.6.1,<8.7.0)",
    "installer (>=0.7.0,<0.8.0)",
    "ipykernel (>=6.29.5,<6.30.0)",
    "ipython (>=8.18.1,<8.19.0)",
    "jaraco-classes (>=3.4.0,<3.5.0)",
    "jaraco-context (>=6.0.1,<6.1.0)",
    "jaraco-functools (>=4.1.0,<4.2.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jupyter-client (>=8.6.3,<8.7.0)",
    "jupyter-core (>=5.8.1,<5.9.0)",
    "keyring (>=25.6.0,<25.7.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "more-itertools (>=10.7.0,<10.8.0)",
    "msgpack (>=1.1.1,<1.2.0)",
    "nest-asyncio (>=1.6.0,<1.7.0)",
    "numpy (>=2.0.2,<2.1.0)",
    "packaging (>=25.0,<25.1)",
    "pandas (>=2.3.0,<2.4.0)",
    "parso (>=0.8.4,<0.9.0)",
    "pbs-installer (>=2025.6.12,<2025.7.0)",
    "pexpect (>=4.9.0,<4.10.0)",
    "pkginfo (>=1.12.1.2,<1.13.0.0)",
    "platformdirs (>=4.3.8,<4.4.0)",
    "poetry (>=2.1.3,<2.2.0)",
    "poetry-core (>=2.1.3,<2.2.0)",
    "prompt-toolkit (>=3.0.51,<3.1.0)",
    "psutil (>=7.0.0,<7.1.0)",
    "ptyprocess (>=0.7.0,<0.8.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "pycparser (>=2.22,<2.23)",
    "pygments (>=2.19.1,<2.20.0)",
    "pyproject-hooks (>=1.2.0,<1.3.0)",
    "python-dateutil (>=2.9.0.post0,<2.10.0)",
    "pytz (>=2025.2,<2025.3)",
    "pyzmq (>=27.0.0,<27.1.0)",
    "rapidfuzz (>=3.13.0,<3.14.0)",
    "requests (>=2.32.4,<2.33.0)",
    "requests-toolbelt (>=1.0.0,<1.1.0)",
    "scipy (>=1.13.1,<1.14.0)",
    "shellingham (>=1.5.4,<1.6.0)",
    "six (>=1.17.0,<1.18.0)",
    "sniffio (>=1.3.1,<1.4.0)",
    "stack-data (>=0.6.3,<0.7.0)",
    "tomli (>=2.2.1,<2.3.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "tornado (>=6.5.1,<6.6.0)",
    "traitlets (>=5.14.3,<5.15.0)",
    "trove-classifiers (>=2025.5.9.12,<2025.6.0.0)",
    "typing-extensions (>=4.14.0,<4.15.0)",
    "tzdata (>=2025.2,<2025.3)",
    "urllib3 (>=2.4.0,<2.5.0)",
    "virtualenv (>=20.31.2,<20.32.0)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "xattr (>=1.1.4,<1.2.0)",
    "zipp (>=3.23.0,<3.24.0)",
    "zstandard (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
